Add image reading

--- a/compressor.ipynb
+++ b/compressor.ipynb
@@ -9,14 +9,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.image import imread\n",
-    "from skimage.util.shape import view_as_blocks"
+    "from skimage.util.shape import view_as_blocks\n",
+    "\n",
+    "from PIL import Image\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load image and convert it to array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = imread(\"data/Lenna.png\")\n",
+    "array = np.array(image)\n",
+    "flat_array = array.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_layer_size = array.size\n",
+    "height = np.size(array, 0)\n",
+    "width = np.size(array, 1)"
    ]
   }
  ],
