--- a/compressor.ipynb
+++ b/compressor.ipynb
@@ -9,17 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.image import imread\n",
-    "from skimage.util.shape import view_as_blocks\n",
-    "\n",
-    "from PIL import Image\n",
-    "import pandas as pd"
+    "from skimage.util.shape import view_as_blocks"
    ]
   },
   {
@@ -31,35 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "image = imread(\"data/Lenna.png\")\n",
+    "image = (2.0 * image / 1.0) - 1.0\n",
     "array = np.array(image)\n",
-    "flat_array = array.flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "256"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_layer_size = array.size\n",
-    "height = np.size(array, 0)\n",
-    "width = np.size(array, 1)"
+    "# flat_array = array.flatten()"
    ]
   }
  ],
@@ -79,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
